--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 7122
           script: |
+            pwd
+            ls
             cd DIS_EjemploRestService
             git pull origin main
             docker compose down
