--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,8 +22,4 @@ jobs:
           username: ${{ secrets.USERNAME }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: 7122
-          script: |
-            cd "DIS_EjemploRestService"
-            git pull origin main
-            docker compose down
-            docker compose up -d --build
+          script: "bash ~/deploy.sh"
