--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
-      - name: Deploy general
+      - name: Deploy V2
         uses: appleboy/ssh-action@master
         with:
           host: herokku.duckdns.org
