--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,6 +24,6 @@ jobs:
           port: 7122
           script: |
             cd DIS_EjemploRestService
-            git pull origin main
+            git pull origin master
             docker compose down
             docker compose up -d --build
